--- a/templates/nueva_seccion.html
+++ b/templates/nueva_seccion.html
@@ -3,6 +3,7 @@
 content %}
 <h1>Nueva Sección para {{ curso.nombre }}</h1>
 <form method="POST">
+  <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
   <label for="titulo">Título:</label>
   <input type="text" name="titulo" required />
   <br />
