--- a/templates/nuevo_curso.html
+++ b/templates/nuevo_curso.html
@@ -2,6 +2,7 @@
 content %}
 <h1>Nuevo Curso</h1>
 <form method="POST" action="{{ url_for('nuevo_curso') }}">
+  <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
   <label for="nombre">Nombre:</label>
   <input type="text" name="nombre" required />
   <br />
