--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,10 @@
     />
     <link
       rel="stylesheet"
+      href="{{ url_for('static', filename='css/styles_comprar_curso.css') }}"
+    />
+    <link
+      rel="stylesheet"
       href="{{ url_for('static', filename='css/styles_ver_curso.css') }}"
     />
     <link
